# ivry_okta_slackbot

./: README.md
.github/workflows/: stg.yml
app/: Dockerfile  ecr.env  main.py  pyproject.toml
app/tests/: main_test.py
cloudformation/: cfn.yaml
terraform/: main.tf  variables.tf
