[tool.poetry]
name = "ivry-okta-slackbot"
version = "0.1.0"
description = ""
authors = ["test <k.amano51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.18.0"
black = "^23.9.1"
isort = "^5.12.0"
requests = "^2.31.0"
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
